Handle byOrg parameter in explore endpoint
